Fixed background offset when on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,12 @@ p {
 	font-weight: 300;
 }
 
+@media screen and ( max-width: 700px ) {
+  .header {
+  	background-position: 37% center;
+  }
+}
+
 .blue {
 	background-color: #e6f1fb;
 	width: 100%;
